{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 63,
  "lineage": "7c2c5974-418f-56f4-213e-d4510b6f43d5",
  "resources": [
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-23T05:21:06.927-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pojet-ecole/global/firewalls/test-firewall",
            "log_config": [],
            "name": "test-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/pojet-ecole/global/networks/test-network",
            "priority": 1000,
            "project": "pojet-ecole",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pojet-ecole/global/firewalls/test-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service_account.google_project_iam_binding.project",
            "module.service_account.google_service_account.service_account",
            "module.service_account.google_service_account_key.service_account",
            "module.service_account.local_file.service_account",
            "module.vpc.google_compute_network.custom-test",
            "module.vpc.google_compute_subnetwork.Test"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mysql_firwall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-23T05:21:06.626-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pojet-ecole/global/firewalls/mysql-firwall",
            "log_config": [],
            "name": "mysql-firwall",
            "network": "https://www.googleapis.com/compute/v1/projects/pojet-ecole/global/networks/test-network",
            "priority": 1000,
            "project": "pojet-ecole",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pojet-ecole/global/firewalls/mysql-firwall",
            "source_ranges": [
              "10.2.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service_account.google_project_iam_binding.project",
            "module.service_account.google_service_account.service_account",
            "module.service_account.google_service_account_key.service_account",
            "module.service_account.local_file.service_account",
            "module.vpc.google_compute_network.custom-test",
            "module.vpc.google_compute_subnetwork.Test"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "computer_engine",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "db",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230711",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/pojet-ecole/zones/us-east1-b/disks/instance-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/pojet-ecole/zones/us-east1-b/instances/instance-db",
            "instance_id": "1187030952582358481",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "yjyquCcLoF0=",
            "name": "instance-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.148.179.243",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/pojet-ecole/global/networks/test-network",
                "network_ip": "10.2.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/pojet-ecole/regions/us-east1/subnetworks/test-subnetwork",
                "subnetwork_project": "pojet-ecole"
              }
            ],
            "project": "pojet-ecole",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pojet-ecole/zones/us-east1-b/instances/instance-db",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "module.firewall.google_compute_firewall.default",
            "module.firewall.google_compute_firewall.mysql_firwall",
            "module.service_account.google_project_iam_binding.project",
            "module.service_account.google_service_account.service_account",
            "module.service_account.google_service_account_key.service_account",
            "module.service_account.local_file.service_account",
            "module.vpc.google_compute_network.custom-test",
            "module.vpc.google_compute_subnetwork.Test"
          ]
        },
        {
          "index_key": "wordpress",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230711",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/pojet-ecole/zones/us-east1-b/disks/instance-wordpress"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/pojet-ecole/zones/us-east1-b/instances/instance-wordpress",
            "instance_id": "6675437173284578768",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "yjyquCcLoF0=",
            "name": "instance-wordpress",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.138.145.142",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/pojet-ecole/global/networks/test-network",
                "network_ip": "10.2.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/pojet-ecole/regions/us-east1/subnetworks/test-subnetwork",
                "subnetwork_project": "pojet-ecole"
              }
            ],
            "project": "pojet-ecole",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pojet-ecole/zones/us-east1-b/instances/instance-wordpress",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "module.firewall.google_compute_firewall.default",
            "module.firewall.google_compute_firewall.mysql_firwall",
            "module.service_account.google_project_iam_binding.project",
            "module.service_account.google_service_account.service_account",
            "module.service_account.google_service_account_key.service_account",
            "module.service_account.local_file.service_account",
            "module.vpc.google_compute_network.custom-test",
            "module.vpc.google_compute_subnetwork.Test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "custom-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/pojet-ecole/global/networks/test-network",
            "mtu": 0,
            "name": "test-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "pojet-ecole",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pojet-ecole/global/networks/test-network"
          },
          "dependencies": [
            "module.service_account.google_project_iam_binding.project",
            "module.service_account.google_service_account.service_account",
            "module.service_account.google_service_account_key.service_account",
            "module.service_account.local_file.service_account"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "Test",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-23T05:20:54.537-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/pojet-ecole/regions/us-east1/subnetworks/test-subnetwork",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "test-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/pojet-ecole/global/networks/test-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "pojet-ecole",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pojet-ecole/regions/us-east1/subnetworks/test-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.service_account.google_project_iam_binding.project",
            "module.service_account.google_service_account.service_account",
            "module.service_account.google_service_account_key.service_account",
            "module.service_account.local_file.service_account",
            "module.vpc.google_compute_network.custom-test"
          ]
        }
      ]
    }
  ]
}